bcomp-assembler/src/main/java/ru/ifmo/cs/bcomp/grammar/BCompNGParser.java
// Generated from d:\programming\bevm-2\BasicComputerExt\bcomp-assembler\src\main\java\ru\ifmo\cs\bcomp\grammar\BCompNG.g4 by ANTLR 4.8
package ru.ifmo.cs.bcomp.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BCompNGParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, ORG=11, WORD=12, END=13, DUP=14, AND=15, OR=16, ADD=17, ADC=18, 
		SUB=19, CMP=20, LOOP=21, LD=22, SWAM=23, JUMP=24, CALL=25, ST=26, NOP=27, 
		HLT=28, CLA=29, NOT=30, CLC=31, CMC=32, ROL=33, ROR=34, ASL=35, ASR=36, 
		SXTB=37, SWAB=38, INC=39, DEC=40, NEG=41, POP=42, POPF=43, RET=44, IRET=45, 
		PUSH=46, PUSHF=47, SWAP=48, BEQ=49, BNE=50, BMI=51, BPL=52, BCS=53, BCC=54, 
		BVS=55, BVC=56, BLT=57, BGE=58, BR=59, DI=60, EI=61, IN=62, OUT=63, INT=64, 
		SP=65, IP=66, NAME=67, DECIMAL=68, HEX=69, COMMENT=70, STRING=71, EOL=72, 
		WS=73;
	public static final int
		RULE_prog = 0, RULE_line = 1, RULE_instructionLine = 2, RULE_instruction = 3, 
		RULE_directive = 4, RULE_orgAddress = 5, RULE_wordDirective = 6, RULE_wordArguments = 7, 
		RULE_wordArgument = 8, RULE_dupArgument = 9, RULE_count = 10, RULE_lbl = 11, 
		RULE_label = 12, RULE_dev = 13, RULE_operand = 14, RULE_directAbsolute = 15, 
		RULE_indirect = 16, RULE_postIncrement = 17, RULE_preDecrement = 18, RULE_displacementSP = 19, 
		RULE_directRelative = 20, RULE_directLoad = 21, RULE_address = 22, RULE_string = 23, 
		RULE_name = 24, RULE_number = 25, RULE_comment = 26, RULE_addr = 27, RULE_nonaddr = 28, 
		RULE_branch = 29, RULE_io = 30, RULE_sp = 31, RULE_ip = 32, RULE_org = 33, 
		RULE_word = 34, RULE_dup = 35, RULE_end = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "line", "instructionLine", "instruction", "directive", "orgAddress", 
			"wordDirective", "wordArguments", "wordArgument", "dupArgument", "count", 
			"lbl", "label", "dev", "operand", "directAbsolute", "indirect", "postIncrement", 
			"preDecrement", "displacementSP", "directRelative", "directLoad", "address", 
			"string", "name", "number", "comment", "addr", "nonaddr", "branch", "io", 
			"sp", "ip", "org", "word", "dup", "end"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'$'", "'?'", "'('", "')'", "':'", "'+'", "'-'", "'&'", 
			"'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "ORG", 
			"WORD", "END", "DUP", "AND", "OR", "ADD", "ADC", "SUB", "CMP", "LOOP", 
			"LD", "SWAM", "JUMP", "CALL", "ST", "NOP", "HLT", "CLA", "NOT", "CLC", 
			"CMC", "ROL", "ROR", "ASL", "ASR", "SXTB", "SWAB", "INC", "DEC", "NEG", 
			"POP", "POPF", "RET", "IRET", "PUSH", "PUSHF", "SWAP", "BEQ", "BNE", 
			"BMI", "BPL", "BCS", "BCC", "BVS", "BVC", "BLT", "BGE", "BR", "DI", "EI", 
			"IN", "OUT", "INT", "SP", "IP", "NAME", "DECIMAL", "HEX", "COMMENT", 
			"STRING", "EOL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BCompNG.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BCompNGParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BCompNGParser.EOF, 0); }
		public List<TerminalNode> EOL() { return getTokens(BCompNGParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(BCompNGParser.EOL, i);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BCompNGVisitor ) return ((BCompNGVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (((((_la - 11)) & ~0x3f) == 0 && ((1L << (_la - 11)) & ((1L << (ORG - 11)) | (1L << (WORD - 11)) | (1L << (END - 11)) | (1L << (AND - 11)) | (1L << (OR - 11)) | (1L << (ADD - 11)) | (1L << (ADC - 11)) | (1L << (SUB - 11)) | (1L << (CMP - 11)) | (1L << (LOOP - 11)) | (1L << (LD - 11)) | (1L << (SWAM - 11)) | (1L << (JUMP - 11)) | (1L << (CALL - 11)) | (1L << (ST - 11)) | (1L << (NOP - 11)) | (1L << (HLT - 11)) | (1L << (CLA - 11)) | (1L << (NOT - 11)) | (1L << (CLC - 11)) | (1L << (CMC - 11)) | (1L << (ROL - 11)) | (1L << (ROR - 11)) | (1L << (ASL - 11)) | (1L << (ASR - 11)) | (1L << (SXTB - 11)) | (1L << (SWAB - 11)) | (1L << (INC - 11)) | (1L << (DEC - 11)) | (1L << (NEG - 11)) | (1L << (POP - 11)) | (1L << (POPF - 11)) | (1L << (RET - 11)) | (1L << (IRET - 11)) | (1L << (PUSH - 11)) | (1L << (PUSHF - 11)) | (1L << (SWAP - 11)) | (1L << (BEQ - 11)) | (1L << (BNE - 11)) | (1L << (BMI - 11)) | (1L << (BPL - 11)) | (1L << (BCS - 11)) | (1L << (BCC - 11)) | (1L << (BVS - 11)) | (1L << (BVC - 11)) | (1L << (BLT - 11)) | (1L << (BGE - 11)) | (1L << (BR - 11)) | (1L << (DI - 11)) | (1L << (EI - 11)) | (1L << (IN - 11)) | (1L << (OUT - 11)) | (1L << (INT - 11)) | (1L << (NAME - 11)) | (1L << (COMMENT - 11)))) != 0)) {
						{
						setState(74);
						line();
						}
					}

					setState(77);
					match(EOL);
					}
					} 
				}
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 11)) & ~0x3f) == 0 && ((1L << (_la - 11)) & ((1L << (ORG - 11)) | (1L << (WORD - 11)) | (1L << (END - 11)) | (1L << (AND - 11)) | (1L << (OR - 11)) | (1L << (ADD - 11)) | (1L << (ADC - 11)) | (1L << (SUB - 11)) | (1L << (CMP - 11)) | (1L << (LOOP - 11)) | (1L << (LD - 11)) | (1L << (SWAM - 11)) | (1L << (JUMP - 11)) | (1L << (CALL - 11)) | (1L << (ST - 11)) | (1L << (NOP - 11)) | (1L << (HLT - 11)) | (1L << (CLA - 11)) | (1L << (NOT - 11)) | (1L << (CLC - 11)) | (1L << (CMC - 11)) | (1L << (ROL - 11)) | (1L << (ROR - 11)) | (1L << (ASL - 11)) | (1L << (ASR - 11)) | (1L << (SXTB - 11)) | (1L << (SWAB - 11)) | (1L << (INC - 11)) | (1L << (DEC - 11)) | (1L << (NEG - 11)) | (1L << (POP - 11)) | (1L << (POPF - 11)) | (1L << (RET - 11)) | (1L << (IRET - 11)) | (1L << (PUSH - 11)) | (1L << (PUSHF - 11)) | (1L << (SWAP - 11)) | (1L << (BEQ - 11)) | (1L << (BNE - 11)) | (1L << (BMI - 11)) | (1L << (BPL - 11)) | (1L << (BCS - 11)) | (1L << (BCC - 11)) | (1L << (BVS - 11)) | (1L << (BVC - 11)) | (1L << (BLT - 11)) | (1L << (BGE - 11)) | (1L << (BR - 11)) | (1L << (DI - 11)) | (1L << (EI - 11)) | (1L << (IN - 11)) | (1L << (OUT - 11)) | (1L << (INT - 11)) | (1L << (NAME - 11)) | (1L << (COMMENT - 11)))) != 0)) {
				{
				setState(83);
				line();
				}
			}

			setState(86);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public InstructionLineContext instructionLine() {
			return getRuleContext(InstructionLineContext.class,0);
		}
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public LblContext lbl() {
			return getRuleContext(LblContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BCompNGVisitor ) return ((BCompNGVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				comment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				instructionLine();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				directive();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				lbl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionLineContext extends ParserRuleContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public LblContext lbl() {
			return getRuleContext(LblContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public InstructionLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructionLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).enterInstructionLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).exitInstructionLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BCompNGVisitor ) return ((BCompNGVisitor<? extends T>)visitor).visitInstructionLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionLineContext instructionLine() throws RecognitionException {
		InstructionLineContext _localctx = new InstructionLineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instructionLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME) {
				{
				setState(94);
				lbl();
				}
			}

			setState(97);
			instruction();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(98);
				comment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public AddrContext addr() {
			return getRuleContext(AddrContext.class,0);
		}
		public OperandContext operand() {
			return getRuleContext(OperandContext.class,0);
		}
		public NonaddrContext nonaddr() {
			return getRuleContext(NonaddrContext.class,0);
		}
		public BranchContext branch() {
			return getRuleContext(BranchContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public IoContext io() {
			return getRuleContext(IoContext.class,0);
		}
		public DevContext dev() {
			return getRuleContext(DevContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BCompNGVisitor ) return ((BCompNGVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruction);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AND:
			case OR:
			case ADD:
			case ADC:
			case SUB:
			case CMP:
			case LOOP:
			case LD:
			case SWAM:
			case JUMP:
			case CALL:
			case ST:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				addr();
				setState(102);
				operand();
				}
				break;
			case NOP:
			case HLT:
			case CLA:
			case NOT:
			case CLC:
			case CMC:
			case ROL:
			case ROR:
			case ASL:
			case ASR:
			case SXTB:
			case SWAB:
			case INC:
			case DEC:
			case NEG:
			case POP:
			case POPF:
			case RET:
			case IRET:
			case PUSH:
			case PUSHF:
			case SWAP:
			case DI:
			case EI:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				nonaddr();
				}
				break;
			case BEQ:
			case BNE:
			case BMI:
			case BPL:
			case BCS:
			case BCC:
			case BVS:
			case BVC:
			case BLT:
			case BGE:
			case BR:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				branch();
				setState(106);
				label();
				}
				break;
			case IN:
			case OUT:
			case INT:
				enterOuterAlt(_localctx, 4);
				{
				setState(108);
				io();
				setState(109);
				dev();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveContext extends ParserRuleContext {
		public OrgContext org() {
			return getRuleContext(OrgContext.class,0);
		}
		public OrgAddressContext orgAddress() {
			return getRuleContext(OrgAddressContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public WordDirectiveContext wordDirective() {
			return getRuleContext(WordDirectiveContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).enterDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).exitDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BCompNGVisitor ) return ((BCompNGVisitor<? extends T>)visitor).visitDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_directive);
		int _la;
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ORG:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				org();
				setState(114);
				orgAddress();
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMENT) {
					{
					setState(115);
					comment();
					}
				}

				}
				break;
			case WORD:
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				wordDirective();
				}
				break;
			case END:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				end();
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMENT) {
					{
					setState(120);
					comment();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrgAddressContext extends ParserRuleContext {
		public AddressContext address() {
			return getRuleContext(AddressContext.class,0);
		}
		public OrgAddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orgAddress; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).enterOrgAddress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).exitOrgAddress(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BCompNGVisitor ) return ((BCompNGVisitor<? extends T>)visitor).visitOrgAddress(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrgAddressContext orgAddress() throws RecognitionException {
		OrgAddressContext _localctx = new OrgAddressContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_orgAddress);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			address();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WordDirectiveContext extends ParserRuleContext {
		public WordContext word() {
			return getRuleContext(WordContext.class,0);
		}
		public WordArgumentsContext wordArguments() {
			return getRuleContext(WordArgumentsContext.class,0);
		}
		public LblContext lbl() {
			return getRuleContext(LblContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public WordDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wordDirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).enterWordDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BCompNGListener ) ((BCompNGListener)listener).exitWordDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BCompNGVisitor ) return ((BCompNGVisitor<? extends T>)visitor).visitWordDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WordDirectiveContext wordDirective() throws RecognitionException {
		WordDirectiveContext _localctx = new WordDirectiveContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_wordDirective);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME) {
				{
				setState(127);
				lbl();
				}
			}

			setState(130);
			word();
			setState(131);
			wordArguments();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(132);
				comment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
